<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/topbar_action_favourite"
        android:icon="@drawable/icon_favourite"
        android:title="@string/topbar_title_favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/topbar_action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/topbar_options_menu_item_share_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/topbar_action_delete"
        android:title="@string/topbar_options_menu_item_delete_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/topbar_action_help"
        android:title="@string/topbar_options_menu_item_help_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/topbar_action_database"
        android:title="database"
        app:showAsAction="never" />

</menu>