<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:onClick="favButtonOnClick"
    android:id="@+id/act_main_baseLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:minHeight="300dp"
        android:nestedScrollingEnabled="true"
        android:background="@color/dailypic_darkred"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:id="@+id/act_main_topPanel">

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:id="@+id/act_main_but_delete"
            android:layout_weight="0.25"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/act_main_but_delete_desc"
            android:clickable="false"
            android:onClick="deleteButtonOnClick"
            android:alpha="1"
            android:background="@color/dailypic_red" />

        <TextView
            style="@style/TitleTextView"
            android:id="@+id/act_main_txt_AppName"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:id="@+id/act_main_but_share"
            android:layout_weight="0.25"
            android:src="@android:drawable/ic_menu_share"
            android:contentDescription="@string/act_main_but_share_desc"
            android:clickable="false"
            android:baselineAlignBottom="false"
            android:onClick="sharebuttonOnClick"
            android:background="@color/dailypic_red" />
    </LinearLayout>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/act_main_gridView"
        android:numColumns="2"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:drawSelectorOnTop="true"
        android:background="@color/dailypic_background"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/act_main_adView"
        android:layout_above="@+id/act_main_bottomPanel" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:minHeight="300dp"
        android:focusableInTouchMode="false"
        android:alpha="1"
        android:layout_marginLeft="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/act_main_bottomPanel"
        android:gravity="bottom"
        android:layout_alignParentTop="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/act_main_but_back"
            android:id="@+id/act_main_but_back"
            android:layout_weight="1"
            style="@android:style/MediaButton.Next"
            android:background="@color/dailypic_darkred"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:clickable="false"
            android:onClick="backButtonOnClick" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/act_main_but_fav"
            android:id="@+id/act_main_but_fav"
            android:layout_weight="2"
            android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha"
            android:visibility="visible"
            android:clickable="false"
            android:contentDescription="@string/act_main_but_fav_desc"
            android:layout_gravity="bottom|right"
            android:background="@color/dailypic_red"
            android:onClick="favButtonOnClick"
            style="@android:style/MediaButton.Next"
            android:scaleType="fitCenter" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/act_main_but_next"
            android:id="@+id/act_main_but_next"
            android:layout_weight="1"
            style="@android:style/MediaButton.Next"
            android:background="@color/dailypic_darkred"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:clickable="false"
            android:onClick="nextButtonOnClick" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/act_main_adView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:foreground="#2caf2a"
        android:layout_below="@+id/act_main_topPanel"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
